# source

./: .gitignore  Cargo.toml  DRYAD_LANGUAGE_SPECIFICATION_FOR_LLM.md  DRYAD_MCP_INTEGRATION_GUIDE.md  README.md  README_MCP_SUITE.md  RELATORIO_CRYPTO_IMPLEMENTACAO.md  SINTAX.md  STANDARDIZATION_MANIFEST.md  SYNTAX_MANIFEST.md  TESTE_ENCODE_DECODE_RELATORIO.md  array_methods_test.dryad  benchmark_prod.md  benchmark_stress.md  build_errors.txt  build_release.py  check_errors.txt  check_errors_final.txt  check_errors_v10.txt  check_errors_v2.txt  check_errors_v3.txt  check_errors_v4.txt  check_errors_v8.txt  check_errors_v9.txt  check_tests_v11.txt  cUsersPedro  demo_file_avancado.dryad  demo_file_io.dryad  demo_system_env.dryad  demo_system_env_avancado.dryad  demo_time.dryad  demo_time_avancado.dryad  deploy_release.py  dryad_mcp_server.py  errors.txt  final_check.txt  install_output_2.txt  liberror_urls.rlib  migrate_parser.py  mock_ide.py  (+24 more)
REPORTS/: BENCHMARK_IMPLEMENTATION_SUCCESS.md  EXPORT_IMPLEMENTATION_SUCCESS.md  LEXER_STRING_IMPROVEMENTS.md  NATIVE_FUNCTIONS_COMPLETE.md  POO_STATUS.md
archived/oldrust/crates/dryad_benchmark/: Cargo.toml  benchmark.toml  benchmarks.md
archived/oldrust/crates/dryad_benchmark/benches/: parser_bench.rs
archived/oldrust/crates/dryad_benchmark/src/: lib.rs  main.rs
archived/oldrust/crates/dryad_benchmark/test_files/: matematica.dryad
archived/oldrust/crates/dryad_cli/: Cargo.toml
archived/oldrust/crates/dryad_cli/src/: oak_adapter.rs
benchmarks/: benchmark.md  benchmark_prod.md
binary_dryad_test/: README.md  main.dryad
crates/dryad_runtime/: Cargo.toml
crates/dryad_runtime/src/: debug.rs  debug_server.rs  environment.rs  errors.rs  heap.rs  interpreter.rs  lib.rs  native_functions.rs  native_functions_legacy.rs.bak  resolver.rs  value.rs
crates/dryad_runtime/src/native_modules/: binary_io.rs  console_io.rs  crypto.rs  database.rs  debug.rs  encode_decode.rs  events.rs  ffi.rs  file_io.rs  http.rs  http_client.rs  http_server.rs  mod.rs  system_env.rs  tcp.rs  terminal_ansi.rs  time.rs  udp.rs  utils.rs  webserver.rs  websocket.rs
crates/dryad_runtime/tests/: advanced_math_runtime_tests.rs  array_runtime_tests.rs  assignment_runtime_tests.rs  async_threading_runtime_tests.rs  comparison_runtime_tests.rs  const_runtime_tests.rs  control_flow_runtime_tests.rs  database_tests.rs  ffi_tests.rs  for_loop_runtime_tests.rs  foreach_runtime_tests.rs  http_client_tests.rs  http_server_tests.rs  integration_foreach_complete.rs  integration_function_complete.rs  interpreter_tests.rs  lambda_runtime_tests.rs  native_functions_tests.rs  native_runtime_tests.rs  recursive_functions_tests.rs  tcp_tests.rs  udp_tests.rs  while_loop_runtime_tests.rs
crates/oak/: Cargo.toml
crates/oak/src/: main.rs  registry.rs
crates/oak/src/commands/: exec.rs  install.rs  lock.rs  mod.rs  registry.rs  run.rs
crates/oak/src/core/: config.rs
develop/: README.md  SESSION_SUMMARY.md  STANDARDIZATION_MANIFEST.md  UPDATE_ROADMAP.md
docs/: ERROR_CATALOG_GUIDE.md  README.md  errors.md  functionalities.md  implementation.md  install.md  internals.md  syntax.md  validator_logic.md
dryad-cpp/: CMakeLists.txt  LICENSE  PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_3_FINAL.md  PHASE_4_PROGRESS_REPORT.md  README.md  STDLIB_ARCHITECTURE.md  STDLIB_IMPLEMENTATION_PLAN.md
dryad-cpp/docs/: SOLID_PRINCIPLES.md
dryad-cpp/docs/plans/: 2026-06-21-vm-dispatcher-design.md  2026-06-21-vm-implementation-plan.md  VM_DELIVERABLES_SUMMARY.md
dryad-cpp/include/dryad/common/: utils.h
dryad-cpp/include/dryad/compiler/: ast.h  evaluator.h  interpreter.h  lexer.h  parser.h  statement_executor.h  token.h
dryad-cpp/include/dryad/runtime/: class.h  environment.h  function.h  gc.h  intrinsics.h  intrinsics_registry.h  module_loader.h  value.h
dryad-cpp/include/dryad/tools/: repl.h
dryad-cpp/src/common/: utils.cpp
dryad-cpp/src/compiler/: ast.cpp  evaluator.cpp  interpreter.cpp  lexer.cpp  parser.cpp  statement_executor.cpp  token.cpp
dryad-cpp/src/runtime/: class.cpp  environment.cpp  function.cpp  gc.cpp  intrinsics.cpp  intrinsics_filesystem.cpp  intrinsics_network.cpp  intrinsics_process.cpp  intrinsics_registry.cpp  module_loader.cpp  value.cpp
dryad-cpp/src/tools/: main.cpp  repl.cpp
dryad-cpp/stdlib/@std/buffers/: buffer.dryad
dryad-cpp/stdlib/@std/core/: disposable.dryad  exceptions.dryad
dryad-cpp/stdlib/@std/io/: file.dryad  filehandle.dryad  stream.dryad  vfs.dryad
dryad-cpp/tests/integration/: intrinsics_integration_test.cpp  sample_integration_test.cpp
dryad-cpp/tests/intrinsics/: test_memory_intrinsics.cpp
dryad-cpp/tests/stdlib/io/: vfs_test.dryad
dryad-cpp/tests/unit/: array_test.cpp  buffer_intrinsics_test.cpp  class_test.cpp  disposable_test.cpp  exceptions_test.cpp  internal_keyword_test.cpp  interpreter_test.cpp  intrinsics_test.cpp  io_functions_test.cpp  lexer_test.cpp  object_test.cpp  parser_test.cpp  sample_test.cpp  value_test.cpp  vfs_test.cpp
dryad-registry-mock/: package.json  server.js
dryad_release/: benchmark.md
dryad_theory/: CORRECTIONS_APPLIED.md  QUICK_START.md  README.md  REWORK_OVERVIEW.md  TASK_CHECKLIST.md  V2_REVISION_SUMMARY.md  conventionbook.txt  docs.txt  dryad_theoretical_foundation.aux  dryad_theoretical_foundation.out  dryad_theoretical_foundation.tex  dryad_theoretical_foundation.toc  dryad_theoretical_foundation_v2.aux  dryad_theoretical_foundation_v2.out  dryad_theoretical_foundation_v2.tex  dryad_theoretical_foundation_v2.toc  intrinsics_architecture_summary.md  native_functions_alternatives.md  self_hosted_native_system.md
examples/: 06-lambdas.dryad  07-arrays-tuples.dryad  08-objects.dryad  12-pattern-matching.dryad  14-modules.dryad  README.md  ipe_demo.dryad
fern/: README.md  oaklibs.json
greenleaf/: README.md  oaklibs.json
ipe/: IMPLEMENTATION_SUMMARY.md  LINUX_BUILD_VERIFICATION.md  MACOS_BUILD_VERIFICATION.md  PLATFORM_VERIFICATION.md  README.md  SDL2_PORTING.md  SDL2_PORT_COMPLETION.md  TASKS_5_7_COMPLETION_REPORT.md  TODO.md  (+1 more)
(+509 files in other folders)
