[package]
name = "dryad_runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime e interpretador para a linguagem Dryad"

[dependencies]
dryad_errors = { workspace = true }
dryad_parser = { workspace = true }
dryad_lexer = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
quick-xml = { version = "0.31", features = ["serialize"] }
serde-xml-rs = "0.6"
serde_yaml = "0.9"
toml = { version = "0.8", features = ["preserve_order"] }

[dev-dependencies]
dryad_lexer = { workspace = true }
