[package]
name = "dryad_benchmark"
version = "0.1.0"
edition = "2021"
description = "Ferramentas de benchmark para a linguagem Dryad"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[dependencies]
dryad_errors = { workspace = true }
dryad_lexer = { workspace = true }
dryad_parser = { workspace = true }
dryad_runtime = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
colored = "2.0"
prettytable-rs = "^0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "parser_bench" 
harness = false

[[bench]]
name = "runtime_bench"
harness = false

[[bench]]
name = "end_to_end_bench"
harness = false
